--- a/view/tool/item/grid-center-sub-second.html
+++ b/view/tool/item/grid-center-sub-second.html
@@ -1,7 +1,7 @@
 
 <div id="{$_name}" style="{$style}" class="{$class} row">{rows}{row}
   <div data-xsnb-item-id="{$id}" onclick="javascript:void(0);" class="xepan-commerce-item">
-    <div data-wow-delay=".5s" class="new-collections-grid1 animated wow slideInUp">{image_wrapper}
+    <div style="visibility: visible; animation-delay: 0.5s; animation-name: slideInUp;" data-wow-delay=".5s" class="new-collections-grid1 animated wow slideInUp animated animated animated">{image_wrapper}
       <div class="new-collections-grid1-image xepan-commerce-image-wrapper"><a href="{$item_detail_page_url_via_image}" class="product-image xepan-commerce-image-anchor"><img src="{first_image}abc{/}" class="img-responsive xepan-commerce-item-img"/></a>
         <div class="new-collections-grid1-image-pos"><a href="{item_detail_page_url_via_name}{/}">Quick View</a></div>
         <div class="new-collections-grid1-right">
@@ -9,8 +9,8 @@
             <div class="rating-left"><img src="images/2.png" alt=" " class="img-responsive"/></div>
             <div class="rating-left"><img src="images/2.png" alt=" " class="img-responsive"/></div>
             <div class="rating-left"><img src="images/2.png" alt=" " class="img-responsive"/></div>
-            <div class="rating-left"><img src="images/1.png" alt=" " class="img-responsive"/></div>
-            <div class="rating-left"><img src="images/1.png" alt=" " class="img-responsive"/></div>
+            <div class="rating-left"><img src="images/2.png" alt=" " class="img-responsive"/></div>
+            <div class="rating-left"><img src="images/2.png" alt=" " class="img-responsive"/></div>
             <div class="clearfix"> </div>
           </div>
         </div>
