--- a/view/tool/item/grid-center-sub-second.jade
+++ b/view/tool/item/grid-center-sub-second.jade
@@ -1,7 +1,7 @@
 div(id='{$_name}' class="{$class} row" style="{$style}")
   {rows}{row}
   .xepan-commerce-item(data-xsnb-item-id='{$id}', onclick='javascript:void(0);')
-    .new-collections-grid1.animated.wow.slideInUp(data-wow-delay='.5s')
+    .new-collections-grid1.animated.wow.slideInUp.animated.animated.animated(style='visibility: visible; animation-delay: 0.5s; animation-name: slideInUp;', data-wow-delay='.5s')
       {image_wrapper}
       .new-collections-grid1-image.xepan-commerce-image-wrapper
         a.product-image.xepan-commerce-image-anchor(href='{$item_detail_page_url_via_image}')
@@ -17,10 +17,10 @@ div(id='{$_name}' class="{$class} row" style="{$style}")
             .rating-left
               img.img-responsive(src='images/2.png', alt=' ')
             .rating-left
-              img.img-responsive(src='images/1.png', alt=' ')
+              img.img-responsive(src='images/2.png', alt=' ')
             .rating-left
-              img.img-responsive(src='images/1.png', alt=' ')
-            .clearfix 
+              img.img-responsive(src='images/2.png', alt=' ')
+            .clearfix  
       {/image_wrapper}
       {name_wrapper} 
       h4
