--- a/view/tool/item/grid-right.html
+++ b/view/tool/item/grid-right.html
@@ -1,7 +1,7 @@
 
 <div id="{$_name}" style="{$style}" class="{$class} row">{rows}{row}
   <div data-xsnb-item-id="{$id}" onclick="javascript:void(0);" class="xepan-commerce-item">
-    <div data-wow-delay=".5s" class="new-collections-grid1 animated wow slideInUp">{image_wrapper}
+    <div style="visibility: visible; animation-delay: 0.5s; animation-name: slideInUp;" data-wow-delay=".5s" class="new-collections-grid1 animated wow slideInUp animated">{image_wrapper}
       <div class="new-collections-grid1-image xepan-commerce-image-wrapper"><a href="{$item_detail_page_url_via_image}" class="product-image xepan-commerce-image-anchor"><img src="{first_image}abc{/}" class="img-responsive xepan-commerce-item-img"/></a>
         <div class="new-collections-grid1-image-pos"><a href="{item_detail_page_url_via_name}{/}">Quick View</a></div>
         <div class="new-collections-grid1-right">
@@ -15,8 +15,8 @@
           </div>
         </div>
       </div>{/image_wrapper}
-      {name_wrapper} 
-      <h4><a href="{item_detail_page_url_via_name}{/}" class="xepan-commerce-item-name">{$name}</a></h4>{/}
+      {name_wrapper}
+      <h4><a href="{item_detail_page_url_via_name}{/}">{$name}</a></h4>{/}
       {description_wrapper}
       <p>{$description}</p>{/}
       <div class="new-collections-grid1-left simpleCart_shelfItem">
@@ -24,8 +24,7 @@
           {sale_price_wrapper}<span class="item_price">{$sale_price}</span>{/}
           {shipping_charge_wrapper}<span class="item_price">{shipping_charge}0{/}</span>{/}
           {addtocart_wrapper}
-          <div data-xsnbitemid="{$id}" data-name="{$name}" class="xepan-commerce-item-addtocart">{$Addtocart}</div>{/}
-          {personalizedbtn_wrapper}<a data-xsnbitemid="{$id}" class="item_add commerce-personalize-button-wrapper">{$personalizedbtn}</a>{/}
+          <div data-xsnbitemid="{$id}" data-name="{$name}" class="xepan-commerce-item-addtocart">{$Addtocart}</div>{personalizedbtn_wrapper}<a data-xsnbitemid="{$id}" class="item_add commerce-personalize-button-wrapper">{$personalizedbtn}</a>{/}
         </p>
       </div>{specification_wrapper}
       <div class="new-collections-grid1-left simpleCart_shelfItem">
