--- a/view/tool/item/grid-right.jade
+++ b/view/tool/item/grid-right.jade
@@ -1,7 +1,7 @@
 div(id='{$_name}' class="{$class} row" style="{$style}")
   {rows}{row}
   .xepan-commerce-item(data-xsnb-item-id='{$id}', onclick='javascript:void(0);')
-    .new-collections-grid1.animated.wow.slideInUp(data-wow-delay='.5s')
+    .new-collections-grid1.animated.wow.slideInUp.animated(style='visibility: visible; animation-delay: 0.5s; animation-name: slideInUp;', data-wow-delay='.5s')
       {image_wrapper}
       .new-collections-grid1-image.xepan-commerce-image-wrapper
         a.product-image.xepan-commerce-image-anchor(href='{$item_detail_page_url_via_image}')
@@ -20,11 +20,11 @@ div(id='{$_name}' class="{$class} row" style="{$style}")
               img.img-responsive(src='images/1.png', alt=' ')
             .rating-left
               img.img-responsive(src='images/1.png', alt=' ')
-            .clearfix 
+            .clearfix  
       {/image_wrapper}
-      {name_wrapper} 
+      {name_wrapper}
       h4
-        a.xepan-commerce-item-name(href='{item_detail_page_url_via_name}{/}') {$name}
+        a(href='{item_detail_page_url_via_name}{/}') {$name}
       {/}
       {description_wrapper}
       p {$description}
@@ -42,7 +42,6 @@ div(id='{$_name}' class="{$class} row" style="{$style}")
           {/}
           {addtocart_wrapper}
           .xepan-commerce-item-addtocart(data-xsnbitemid="{$id}" data-name="{$name}"){$Addtocart}
-          {/}
           {personalizedbtn_wrapper}
           a.item_add(data-xsnbitemid="{$id}" class="commerce-personalize-button-wrapper") {$personalizedbtn}
           {/}
