--- a/view/tool/cart/short_cart.html
+++ b/view/tool/cart/short_cart.html
@@ -4,14 +4,14 @@
   {cart_container}
   <ul>
     <li style="padding:0px;margin:0px;" class="dropdown reset-margin text-center"><a href="#" data-toggle="dropdown" role="button" aria-expanded="false" style="padding:0px;margin:0px;" class="dropdown-toggle reset-margin"><span class="xepan-commerce-cart-item-count"> {total_count}0{/}</span> - Items<span class="caret"></span></a>{lister_wrapper}
-      <ul role="menu" style="width:400px; background:white" class="dropdown-menu dropdown-cart xepan-cart"> 
+      <ul role="menu" style="width:400px; background:white" class="dropdown-menu dropdown-menu-right dropdown-menu-right dropdown-cart xepan-cart"> 
         <div margin="10px 20px" class="scroll-item">{lister}
-          <div class="row">
+          <div style="margin-left:100px; margin-bottom: 10px;" class="row">
             <div class="col-md-6">Item</div>
             <div class="col-md-5">Amount</div>
             <div class="col-md-1"></div>
           </div>{rows}{row}
-          <div id="item-{$id}" style="margin:0;margin-bottom:5px;" class="row xepan-commerce-tool-cart-item-row">{image_wrapper}
+          <div id="item-{$id}" style="margin:0;margin-bottom:5px;" class="row item xepan-commerce-tool-cart-item-row">{image_wrapper}
             <div class="col-md-2"><img alt="{image}{/}" src="{$image_url}" onerror="this.src='vendor/xepan/commerce/templates/view/tool/cart/images/not-found.png'" width="100%;"/></div>{/}
             <div style="margin:0px;padding:0px;" class="col-md-6 short-cart-item-name">
               {$name} ({$item_code})
@@ -30,10 +30,10 @@
         <li class="xepan-cart-empty">{$not_found_message}</li>{/}
         {footer}
         <li class="divider"></li>
-        <li>{sum_amount_excluding_tax_wrapper}
+        <li style="font-size:1.5em; padding-left:5px; padding-right:10px;">{sum_amount_excluding_tax_wrapper}
           <div class="row">
             <div class="col-lg-6">Sum Amount</div>
-            <div class="col-lg-6 text-right"> {sum_amount_excluding_tax}{/}</div>
+            <div class="col-lg-6 text-right">{sum_amount_excluding_tax}0.00{/}</div>
           </div>{/}
           {discount_voucher_wrapper}
           <div class="row">
