some modification in login tool

--- a/layout/default.html
+++ b/layout/default.html
@@ -1,8 +1,6 @@
 <!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
+Author: Epan
+Author URL: http://epan.in
 -->
 <!DOCTYPE html>
 <html>
@@ -133,7 +131,7 @@ xEpan-ATK-Header-End-->
 				<div class="logo-nav-right">
 				</div>
 				<ul class="nav navbar-nav">
-					<div id="f935d520-b3e5-4435-f51a-ae2b0c11ec20" class="xepan-component xepan-serverside-component" xepan-component="xepan/commerce/Tool_Category"></div>
+					<div url_page="category" id="f935d520-b3e5-4435-f51a-ae2b0c11ec20" class="xepan-component xepan-serverside-component" xepan-component="xepan/commerce/Tool_Category"></div>
 				</ul>
 			</div>
 		</div>
@@ -228,7 +226,7 @@ xEpan-ATK-Header-End-->
 				<h2><a href="index">Best Store <span>shop anywhere</span></a></h2>
 			</div>
 			<div class="copy-right animated wow slideInUp" data-wow-delay=".5s">
-				<p>&copy 2016 Best Store. Design by <a href="http://w3layouts.com/">Epan</a></p>
+				<p>2016<a href="http://epan.in/">Epan</a></p>
 			</div>
 		</div>
 	</div>
