--- a/layout/default.html
+++ b/layout/default.html
@@ -13,17 +13,28 @@ Author URL: http://epan.in
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
+
+<!--xEpan-ATK-Header-Start
+{$js_block}
+{$js_include}
+<script type="text/javascript">
+  $(function(){
+    {$document_ready}
+  });
+</script>
+xEpan-ATK-Header-End-->
+
 <!-- //for-mobile-apps -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <!-- js -->
-<script src="js/jquery.min.js"></script>
+<!-- <script src="js/jquery.min.js"></script> -->
 <!-- //js -->
 <!-- cart -->
 <script src="js/simpleCart.min.js"></script>
 <!-- cart -->
 <!-- for bootstrap working -->
-<script type="text/javascript" src="js/bootstrap-3.1.1.min.js"></script>
+<!-- <script type="text/javascript" src="js/bootstrap-3.1.1.min.js"></script> -->
 <!-- //for bootstrap working -->
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
 <link href='https/:/fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
@@ -37,15 +48,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
  new WOW().init();
 </script>
 <!-- //animation-effect -->
-<!--xEpan-ATK-Header-Start
-{$js_block}
-{$js_include}
-<script type="text/javascript">
-  $(function(){
-    {$document_ready}
-  });
-</script>
-xEpan-ATK-Header-End-->
 </head>
 	
 <body>
@@ -226,7 +228,7 @@ xEpan-ATK-Header-End-->
 				<h2><a href="index">Best Store <span>shop anywhere</span></a></h2>
 			</div>
 			<div class="copy-right animated wow slideInUp" data-wow-delay=".5s">
-				<p>2016<a href="http://epan.in/">Epan</a></p>
+				<p>2016 . <a href="http://epan.in/">Epan</a></p>
 			</div>
 		</div>
 	</div>
